--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -1,1 +1,32 @@
 /* write your override styles here */
+*{
+    background: url(../images/tag-1.png) no-repeat;
+    z-index: 7;
+    
+}
+.tag-1{
+    background: url(../images/tag-1.png) no-repeat;
+    z-index: 7;
+    display:none;
+
+}
+
+#tag-1,#tag-2,#tag-3{
+    background: url(../images/tag-1.png) no-repeat;
+    z-index: 7;
+    display:none;
+
+}
+#wall .tag-1 {
+    display: none;
+  }
+.parent{
+    background: url(../images/tag-1.png) no-repeat;
+    z-index: 7;
+    display:none;
+  }
+  #wall.tag-3{
+    background: url(../images/tag-1.png) no-repeat;
+    z-index: 7;
+    display:none;
+  }
